cluster architecture, installation & configuration/deny-egress-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy 
metadata:
  name: default-deny-egress 
spec:
  podSelector: {}
  policyTypes:
  - Egress
