cluster architecture, installation & configuration/deny-ingress-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy 
metadata:
  name: default-deny-ingress 
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
