cluster architecture, installation & configuration/namespace-selector-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy 
metadata:
  name: napespace-selector
spec:
  podSelector: 
    matchLabels:
      role: secure 
  ingress:
  - from:
     - namespaceSelector:
        matchLabels:
          role: app 
       podSelector:
          matchLabels:
            role: reconcile
  policyTypes: 
  - Egress
