cluster architecture, installation & configuration/podSelector-ip-network-policy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy 
metadata:
  name: deny-ingress-egress 
spec:
  podSelector: 
    matchLabels:
      role: secure 
  ingress:
  - from:
     - ipBlock:
        cidr: 192.168.0.0/16
        except:
        - 192.168.137.70/32
  policyTypes: 
  - Ingress
