cluster architecture, installation & configuration/podSelector-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy 
metadata:
  name: deny-ingress-egress 
spec:
  podSelector: 
    matchLabels:
      role: suspicious 
  policyTypes:
  - Egress
  - Ingress
